--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1 class="text-3xl font-bold bg-red-500 text-white p-4">
         Instalación Tailwind
     </h1>
+
+    <h3 class="text-3xl font-bold bg-red-500 text-white p-4">
+        Prueba!!!
+    </h3>
 </body>
 </html>
