--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     <h3 class="text-3xl font-bold bg-red-500 text-white p-4">
         Prueba!!!
     </h3>
+
+
+    <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
+        Prueba2!!!
+    </h2>
 </body>
 </html>
