--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
     <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
         Prueba2!!!
     </h2>
+
+
+    <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
+        Prueba1!!!
+    </h2>
+
 </body>
 </html>
