--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
         Prueba1!!!
     </h2>
 
+    <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
+        Pruebaddd1!!!
+    </h2>
+
+
 </body>
 </html>
