--- a/index.html
+++ b/index.html
@@ -16,19 +16,6 @@
     </h3>
 
 
-    <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
-        Prueba2!!!
-    </h2>
-
-
-    <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
-        Prueba1!!!
-    </h2>
-
-    <h2 class="text-3xl font-bold bg-red-500 text-white p-4">
-        Pruebaddd1!!!
-    </h2>
-
-
+   <h1 class="text-3xl font-regular text-blue">elimine las pruebas!!</h1> 
 </body>
 </html>
